<resources>
    <string name="app_name">Mm91</string>
    <string name="price_type">VNĐ%d</string>
    <string name="add_product">Add Product</string>
    <string name="add_new">Add New</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filter_category">Filter By Category</string>
    <string name="filter_place">Filter By Place</string>
    <string name="search">Search</string>
    <string name="empty">No Data</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="dummy_less">Dummy Text</string>
    <string name="dummy_more">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="category_name">Category Name</string>
</resources>
