<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kyler="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duckky.mm91.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/product_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/list"
        kyler:backgroundTint="@color/white"
        kyler:fabSize="normal" />

    <LinearLayout
        android:id="@+id/add_product_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/list_fab"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_product_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/add_product"
            android:textColor="@color/colorPrimary" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_product_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/list_fab"
            android:layout_alignParentRight="true"
            android:src="@drawable/add"
            kyler:backgroundTint="@color/white"
            kyler:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_category_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_product_container"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_category_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/filter_category"
            android:textColor="@color/colorPrimary" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/filter_category_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/category"
            kyler:backgroundTint="@color/white"
            kyler:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_place_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/filter_category_container"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filter_place_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/filter_place"
            android:textColor="@color/colorPrimary" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/filter_place_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/place"
            kyler:backgroundTint="@color/white"
            kyler:fabSize="mini" />
    </LinearLayout>
</RelativeLayout>
